feat: Add General, C, Python and Javascript checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,12 @@
 requires = [
     "setuptools>=42",
     "wheel",
-    "Flask"
+    "colorama",
+    "pycodestyle"
 ]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 88   # Adjust to your preferred line length
-target-version = ['py38']  # Specify your target Python version
+target-version = ['py37']  # Specify your target Python version
 exclude = 'venv/'
