--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,7 @@ build-backend = "setuptools.build_meta"
 line-length = 88   # Adjust to your preferred line length
 target-version = ['py37']  # Specify your target Python version
 exclude = 'venv/'
+
+[project.urls]
+"Homepage" = "https://github.com/Emmo00/alx_test.git"
+"Bug Tracker" = "https://github.com/Emmo00/alx_test/issues"
