chore: Project Config, metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,14 +3,20 @@ name = alx-test
 version = 0.0.1
 author = Nwafor Emmanuel
 author_email = nwaforemmanuel005@gmail.com
-description = Shell Utility that checks for some of ALX_SWE Project Requirements
+description = ALX test Suite. Shell Utility that checks for some of ALX_SWE Project Requirements
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Emmo00/alx-test
+license = MIT
+license_files = LICENSE
 classifiers =
-    Programming Language :: Python :: 3
+    Environment :: Console
+    Intended Audience :: Developers
     License :: OSI Approved :: MIT License
-    Operating System :: OS Independent
+    Operating System :: Linux
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+keywords = alx, alx test, test, checks, test suite
 
 [options]
 packages = find:
