chore: More config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = alx-test
-version = 0.0.1
+version = 0.0.3
 author = Nwafor Emmanuel
 author_email = nwaforemmanuel005@gmail.com
 description = ALX test Suite. Shell Utility that checks for some of ALX_SWE Project Requirements
@@ -13,7 +13,7 @@ classifiers =
     Environment :: Console
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
-    Operating System :: Linux
+    Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
 keywords = alx, alx test, test, checks, test suite
@@ -22,6 +22,9 @@ keywords = alx, alx test, test, checks, test suite
 packages = find:
 python_requires = >=3.7
 include_package_data = True
+install_requires =
+    pycodestyle
+    colorama
 
 [options.entry_points]
 console_scripts =
