--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,24 @@
+[project]
+name = "alx-test"
+version = "0.0.3"
+authors = [{ name="Emmanuel Nwafor", email="nwaforemmanuel005@gmail.com"}]
+description = "ALX test Suite. Shell Utility that checks for some of ALX_SWE Project Requirements"
+readme = "README.md"
+requires-python = ">=3.7"
+classifiers = [
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+]
+keywords = ["alx", "alx test", "test", "checks", "test suite", "green squares"]
+
 [build-system]
 requires = [
     "setuptools>=42",
     "wheel",
-    "colorama",
-    "pycodestyle"
 ]
 build-backend = "setuptools.build_meta"
 
