--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = alx-test
-version = 0.0.3
+version = 0.0.1
 author = Nwafor Emmanuel
 author_email = nwaforemmanuel005@gmail.com
-description = ALX test Suite. Shell Utility that checks for some of ALX_SWE Project Requirements
+description = ALX test Suite. Shell Utility that checks for some of ALX Software Engineering Project Requirements
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Emmo00/alx-test
