--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = alx-test
+name = alxcheck
 version = 0.0.1
 author = Nwafor Emmanuel
 author_email = nwaforemmanuel005@gmail.com
@@ -28,4 +28,4 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    alx_test = alx_test.main:main
+    alxcheck = alxcheck.main:main
