config: Update setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = alxcheck
 version = 0.0.3
 author = Nwafor Emmanuel
 author_email = nwaforemmanuel005@gmail.com
-description = ALX test Suite. Shell Utility that checks for some of ALX Software Engineering Project Requirements
+description = "ALX text suite. Shell Utility that checks files for ALX's Project Requirements. Including: General, C, JavaScript and Python projects"
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/Emmo00/alx-test
