--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "alxcheck"
 version = "0.0.3"
 authors = [{ name="Emmanuel Nwafor", email="nwaforemmanuel005@gmail.com"}]
-description = "ALX test Suite. Shell Utility that checks for some of ALX Software Engineering Project Requirements"
+description = "ALX text suite. Shell Utility that checks files for ALX's Project Requirements. Including: General, C, JavaScript and Python projects"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
