--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,37 @@
+[project]
+name = "alxcheck"
+version = "0.1.2"
+authors = [{ name="Emmanuel Nwafor", email="nwaforemmanuel005@gmail.com"}]
+description = "ALX text suite. Shell Utility that checks files for ALX's Project Requirements. Including: General, C, JavaScript and Python projects"
+classifiers = [
+    "Environment :: Console",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+]
+keywords = ["alx", "alx test", "test", "checks", "test suite", "green squares"]
+requires-python = ">=3.7"
+dependencies = [
+    "pycodestyle",
+    "colorama",
+]
+
+[project.license]
+text = "MIT"
+
+[project.readme]
+file = "README.md"
+content-type = "text/markdown"
+
+[project.urls]
+"Homepage" = "https://github.com/Emmo00/alxcheck.git"
+"Bug Tracker" = "https://github.com/Emmo00/alxcheck/issues"
+
+[project.scripts]
+alxcheck = "alxcheck.main:main"
+
 [build-system]
 requires = [
     "setuptools",
@@ -9,7 +43,3 @@ build-backend = "setuptools.build_meta"
 line-length = 88   # Adjust to your preferred line length
 target-version = ['py37']  # Specify your target Python version
 exclude = 'venv/'
-
-[project.urls]
-"Homepage" = "https://github.com/Emmo00/alxcheck.git"
-"Bug Tracker" = "https://github.com/Emmo00/alxcheck/issues"
